[project]
name = "marketmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fredapi>=0.5.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.0",
    "newsapi-python>=0.2.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pycoingecko>=3.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "yfinance>=1.3.0",
]
